# laundry

./: .env.development  .env.production  .env.staging  .gitignore  README.md  index.html  main.js  myapp.key  myapp.key.pub  package.json  update-version.ps1  vite.config.js  vite.config.mjs
.github/workflows/: publish.yml
docs/: 01-index.md  02-login-register-manual.md  03-dashboard-manual.md  04-laundry-manual.md  05-pickup-manual.md  06-orders-management-manual.md  07-hangup-manual.md  08-coupon-management-manual.md  09-member-management-manual.md  10-personal-center-manual.md  11-expenditure-management-manual.md  12-clothing-management-manual.md  13-dictionary-management-manual.md  14-level-management-manual.md  15-parameter-settings-manual.md  16-price-management-manual.md  17-rack-management-manual.md  18-tags-management-manual.md  promotion-management-manual.md  storage-card-manual.md
src/: App.vue  main.js  permission.js
src-tauri/: .taurignore  2  Cargo.toml  PAYMENT_MIGRATION.md  config.yml  database.db  my_database.db  my_database.db-shm  my_database.db-wal  tauri.conf.json
src-tauri/.cargo/: config.toml  sccache.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/scripts/: V1__init.sql  V2__add_order_price_relation.sql  V2__add_subscriptions.sql  V2__payments.sql  V3__add_user_tours.sql  V3_update_printers.sql  V4__add_subscription_plans.sql  V4_alter_user_create_time.sql  V5__add_alipay_config.sql  V5_add_payment_refund_reason.sql  V7__add_qrcode_payment.sql  mod.rs  迁移说明文档.md
src-tauri/src/: lib.rs  main.rs  state.rs  update.rs
src-tauri/src/captcha/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/db/: adjust_price.rs  alarm_management.rs  alipay_config.rs  cloth_price.rs  cloth_sequence.rs  clothing.rs  clothing_category.rs  clothing_style.rs  configs.rs  coupon_orders.rs  coupons.rs  delivery.rs  dict_data.rs  dict_type.rs  drying_rack.rs  expenditure.rs  local_users.rs  membership_level.rs  menu.rs  message.rs  mod.rs  notice_temp.rs  order_clothes.rs  order_pictures.rs  orders.rs  payments.rs  printer.rs  qrcode_payments.rs  sms.rs  sms_plan.rs  sms_subscription.rs  subscription_plan.rs  subscription_service.rs  subscriptions.rs  tags.rs  tour_guide.rs  user.rs  user_coupons.rs  user_membership_level.rs  user_tags.rs  (+2 more)
src-tauri/src/error/: mod.rs
src-tauri/src/files/: mod.rs
src-tauri/src/home/: mod.rs
src-tauri/src/pay/: mod.rs  wechat.rs
src-tauri/src/printer/: mod.rs
src-tauri/src/routers/: mod.rs
src-tauri/src/sql/: 20240901.sql  basic.sql  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: chrono_serde.rs  device.rs  mod.rs  request.rs
src/api/: home.js  login.js  menu.js
src/api/frontend/: delivery.js
src/api/system/: clothing.js  clothingCategory.js  clothingStyle.js  cloths.js  comment.js  config.js  coupon.js  coupon_order.js  dispatch.js  expenditure.js  files.js  menu.js  message.js  notice_record.js  orderCloth.js  orders.js  payment.js  post.js  posts.js  price.js  printer.js  profile.js  promote_record.js  promote_temp.js  rack.js  rackCheck.js  record.js  subscription.js  subscriptionPayment.js  tags.js  template.js  tour_guide.js  user.js  user_coupon.js
src/assets/arch/: craete_order时序图.md  create_order_arch.md
src/assets/styles/: element-ui.scss  index.scss  ruoyi.scss  sidebar.scss  transition.scss  variables.module.scss  wave.scss
src/components/: BigIcon.vue  CheckBoxGroup.vue  CheckboxButton.vue  CustomRadioButton.vue  CustomRadioButtonGroup.vue  GaugeChart.vue  OrderNonEditableMessage.vue  RadioButton.vue  RefundDialog.vue  ThemeSwitch.vue  UserSelect.vue  close_bar.vue
src/components/AlipayConfig/: index.vue
src/components/AppWatermark/: index.vue
src/components/ChangePwdDialog/: index.vue
src/components/CustomTable/: index copy.vue  index.vue
src/components/DictTag/: index.vue
src/components/Editor/: index.vue
src/components/FileUpload/: index.vue
src/components/ImageUpload/: index.vue
src/components/LockScreen/: index.vue
src/components/MenuTourGuide/: index.vue
src/components/MessageCenter/: index.vue
src/components/OrderTourGuide/: index.vue
src/components/Pagination/: index.vue
src/composables/: useOrderCalculation.js  useOrderValidation.js  usePrinting.js  useUserManagement.js
src/constants/: index.js
src/directive/: index.js  vSlideIn.js
src/layout/: index.vue
src/router/: index.js
src/store/: index.js
src/utils/: area-data.js  directWebSocket.js  eventBus.js  index.js  initDirectWebSocket.js  initTauriWebSocket.js  invoke.js  notification.js  request.js  ruoyi.js  tauriWebSocket.js
src/views/: index copy 2.vue  index copy.vue  index.vue  login.vue  register.vue
(+137 files in other folders)
