[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["tray-icon","test" ] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }

printpdf = { version = "0.7.0", features = ['embedded_images'] }
image = "0.25.4"
printers = "2.0.0"
barcoders = { version = "2.0.0", features = ["image"] }
lopdf = "0.34.0"
pdf = "0.9.0"
genpdf = { version = "0.2.0", features = ['images'] }
pinyin = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.34"
tracing-appender = "0.2.3"
chrono = "0.4.38"
lazy_static = "1.5.0"
