[package]
name = "app"
version = "0.1.3"
description = "A Tauri App"
authors = ["Xu-mj"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [
    "tray-icon",
    "protocol-asset",
    "test",
    "devtools",
] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
network-interface = "2.0.1"
wmi = "0.15.2"

printpdf = { version = "0.7.0", features = ['embedded_images'] }
image = "0.25"
printers = "2.1.2"
barcoders = { version = "2.0.0", features = ["image"] }
lopdf = "0.34.0"
pdf = "0.9.0"
genpdf = { version = "0.2.0", features = ['images'] }
pinyin = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.34"
tracing-appender = "0.2.3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.8.5"
tauri-plugin-fs = "2"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
async-trait = "0.1.83"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.20.2"
rusttype = "0.9.3"
regex = "1.11.1"
alibaba-cloud-sdk-rust = "0.1.15"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.2.0"
reqwest = "0.12.12"
weapay = "0.1.0"
hostname = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
